@@ -115,21 +115,21 @@ as.hexmode <- function(x)
 
 
 `!.octmode` <- function(a)
-    as.octmode(.Call(.C_bitwiseNot, as.octmode(a)))
+    as.octmode(.Internal(bitwiseNot(as.octmode(a))))
 
 `&.octmode` <- function(a, b)
-    as.octmode(.Call(.C_bitwiseAnd, as.octmode(a), as.octmode(b)))
+    as.octmode(.Internal(bitwiseAnd(as.octmode(a), as.octmode(b))))
 `|.octmode` <- function(a, b)
-    as.octmode(.Call(.C_bitwiseOr, as.octmode(a), as.octmode(b)))
+    as.octmode(.Internal(bitwiseOr(as.octmode(a), as.octmode(b))))
 xor.octmode <- function(a, b)
-    as.octmode(.Call(.C_bitwiseXor, as.octmode(a), as.octmode(b)))
+    as.octmode(.Internal(bitwiseXor(as.octmode(a), as.octmode(b))))
 
 `!.hexmode` <- function(a)
-    as.hexmode(.Call(.C_bitwiseNot, as.hexmode(a)))
+    as.hexmode(.Internal(bitwiseNot(as.hexmode(a))))
 
 `&.hexmode` <- function(a, b)
-    as.hexmode(.Call(.C_bitwiseAnd, as.hexmode(a), as.hexmode(b)))
+    as.hexmode(.Internal(bitwiseAnd(as.hexmode(a), as.hexmode(b))))
 `|.hexmode` <- function(a, b)
-    as.hexmode(.Call(.C_bitwiseOr, as.hexmode(a), as.hexmode(b)))
+    as.hexmode(.Internal(bitwiseOr(as.hexmode(a), as.hexmode(b))))
 xor.hexmode <- function(a, b)
-    as.hexmode(.Call(.C_bitwiseXor, as.hexmode(a), as.hexmode(b)))
+    as.hexmode(.Internal(bitwiseXor(as.hexmode(a), as.hexmode(b))))
