@@ -26,5 +26,5 @@ tabulate <- function(bin, nbins = max(1L, bin, na.rm = TRUE))
         stop("attempt to make a table with >= 2^31 elements")
     nbins <- as.integer(nbins)
     if (is.na(nbins)) stop("invalid value of 'nbins'")
-    .Call(.C_R_Tabulate, bin, nbins)
+    .Internal(tabulate(bin, nbins))
 }
