@@ -2154,8 +2154,6 @@ power.t.test(n=10, delta=NULL, power=.9, alternative="two.sided")
 ## PR#3221 eigenvectors should be a matrix even in the 1x1 case
 A <- matrix(1)
 stopifnot(is.matrix(eigen(A)$vectors))
-stopifnot(is.matrix(eigen(A, EISPACK = TRUE)$vectors))
-# stopifnot(is.matrix(La.eigen(A)$vectors)) defunct in 2.0.0
 ## gave vector in 1.7.0
 
 
@@ -3891,18 +3889,6 @@ stopifnot(nchar(xx) == nchar(x), xx == x)
 ## had random trailing bytes from second element on in 2.2.1.
 ## identical reported true, fixed in 2.3.0.
 
-## eigen(EISPACK=TRUE) problem reported to R-devel by Ole Christensen
-## 2006-01-03
-Gm <- rbind(c(-0.3194373786, 0.2444066686, 0.0428108831,  3.221983e-02),
-            c(0.0002071301, -0.0003282719,  0.0001211418, 5.128830e-12),
-            c(0.0621332005,  0.0545850010, -0.2098487035, 9.313050e-02),
-            c(0.0280936142,  0.0586642184,  0.1658310277, -2.525889e-01))
-temp <- eigen(Gm)
-temp
-temp2 <- eigen(Gm, EISPACK = TRUE)
-temp2$vectors <- apply(temp2$vectors, 2, function(x) x/sqrt(sum(Mod(x)^2)))
-temp2
-## segfaulted in 2.2.1
 
 ## rbind on data frames with 0 rows (PR#8506)
 foo <- data.frame(x = 1:10, y = rnorm(10))
